force-app/main/default/objects/Forecast_Summary__c/Forecast_Summary__c.object-meta.xml
<CustomObject>
    <label>Forecast Summary</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Summarys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>