force-app/main/default/objects/Forecast_Summary__c/fields/Attachment_to_upload_a_file__c.field-meta.xml
<CustomField>
    <fullName>Attachment_to_upload_a_file__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Attachment to upload a file</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>