force-app/main/default/objects/Forecast_Summary__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>To</label>
    <type>Date</type>
</CustomField>